# Lem_IPC

./: CMakeLists.txt  Makefile  README.md  faq-lem-ipc-ru.txt
includes/: ipc_management.h  lem-ipc.h  lem_ipc.h
includes/logger/: logger.h
ipc_lib/: CMakeLists.txt  Makefile
ipc_lib/includes/: ipc_lib.h
ipc_lib/sources/: ipc_creation.c  ipc_freeing.c  utils.c
ncurses/: CMakeLists.txt  Makefile
ncurses/includes/: graphic.h
ncurses/sources/: main.c  printing.c
sources/: Makefile  check_input.c  directions.c  enemy_searching.c  game.c  graphic.c  ipc_closing.c  ipc_creation.c  ipc_freeing.c  ipc_management.c  main.c  moving.c  player_management.c  signals.c  utils.c
sources/logger/: logger.c  logger_utils.c
